finally fixed that annoying layout issue

--- a/src/styles/pages/docs.scss
+++ b/src/styles/pages/docs.scss
@@ -3,10 +3,7 @@
 // Main docs container
 .docs {
 	display: flex;
-	flex: 1 1 auto;
-	max-block-size: calc(100vh - 58px);
 	background-color: var(--fds-solid-background-base);
-	overflow: hidden;
 
 	// Small device support
 	@media screen and (width < 648px) {
@@ -31,7 +28,7 @@
 	// This is mainly here because I didn't want to use
 	// absolute positioning on the mobile search UI.
 	&-inner {
-		flex: 1 1 auto;
+		// flex: 1 1 auto;
 		padding: 44px 56px;
 	}
 
